--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -22,6 +22,7 @@ v0.41.0-dev (SVN)
 + Bug: Added missing i18n entry for sensors_detect_all
 + Bug [#4410]: Tanks and subclasses pass validation when they shouldn't
 + Bug [#4409]: Princess Cannot Move/Fire BAs with APMs
++ Bug: Client can get deadlocked when disconnecting
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
