--- a/trunk/megamek/i18n/megamek/client/messages_ru.properties
+++ b/trunk/megamek/i18n/megamek/client/messages_ru.properties
@@ -1,3 +1,49 @@
 Yes=Да
 No=Нет
+Okay=ОК
 Cancel=Отмена
+Close=Закрыть
+CommonAboutDialog.Close=Закрыть
+CommonHelpDialog.Close=Закрыть
+CustomBattleArmorDialog.m_bClose=Закрыть
+PlayerListDialog.Close=Закрыть
+Ruler.Close=Закрыть
+Next=Далее
+Previous=Назад
+AimedShotDialog.dontAim=Не прицеливаться
+BoardEditor.butBoardSave=Сохранить
+ConfirmDialog.dontBother=Не показывать снова
+CommonMenuBar.fireCancel=Отмена
+CommonMenuBar.helpAbout=Информация о MegaMek
+CommonAboutDialog.title=Информация о MegaMek
+MegaMek.Quit.label=Выход
+MegaMek.welcome.title=Добро пожаловать в MegaMek 
+MegaMek.welcome.message=MegaMek (МегаМек) является комплексная программа -- если вам\r\nкогда-нибудь нужно помочь, вы можете начать с чтения документации,\r\nдоступной через меню «Справка».\n\ \nХотите ли вы посмотреть документацию сейчас?\n
+CommonMenuBar.HelpMenu=Справка
+BotConfigDialog.princessHelpButtonCaption=Справка
+CamoChoiceDialog.Cancel=Отмена
+CommonMenuBar.moveCancel=Отмена
+FiringDisplay.fireCancel=Отмена
+MovementDisplay.moveCancel=Отмена
+NoteDialog.Cancel=Отмена
+PortraitChoiceDialog.Cancel=Отмена
+TargetingPhaseDisplay.fireCancel=Отмена
+CommonMenuBar.ViewMenu=Вид
+BoardEditor.Done=Заканчивать
+BoardView1.done=Заканчивать
+ClientGUI.doneMenuItem=Заканчивать
+DeployMinefieldDisplay.Done=Заканчивать
+FiringDisplay.Done=Заканчивать
+MovementDisplay.Done=Заканчивать
+NoteDialog.Done=Заканчивать
+PhysicalDisplay.Done=Заканчивать
+ReportDisplay.Done=Заканчивать
+SelectArtyAutoHitHexDisplay.Done=Заканчивать
+TargetingPhaseDisplay.Done=Заканчивать
+CommonMenuBar.FileMenu=Файл
+CommonMenuBar.fileBoardOpen=Открыть
+CommonMenuBar.fileGameOpen=Открыть
+CommonMenuBar.fileUnitsOpen=Открыть
+CommonMenuBar.DeployMenu=Располагать
+DeploymentDisplay.Deploy=Располагать
+
