--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -26,6 +26,7 @@ v0.41.0-dev (SVN)
 + Translation(Russian): Initial welcome window pop up completed along with some other similar words
 + Bug [#4413]: Tank: Cargo cost 2 crit slots, doesn't matter how much Cargo
 + Data:New Images
++ Adjusted threading properties of AbstractConnection
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
