--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -27,6 +27,8 @@ v0.41.0-dev (SVN)
 + Bug [#4413]: Tank: Cargo cost 2 crit slots, doesn't matter how much Cargo
 + Data:New Images
 + Adjusted threading properties of AbstractConnection
++ Bug [#4400]: Fixed potential threading issus in Server.  This, combined with
+    the last fix, should hopefully eliminate some occurances of server hanging
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
