--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -29,6 +29,7 @@ v0.41.0-dev (SVN)
 + Adjusted threading properties of AbstractConnection
 + Bug [#4400]: Fixed potential threading issus in Server.  This, combined with
     the last fix, should hopefully eliminate some occurances of server hanging
++ Bug: Hang in UnitDisplay if next/prev weapon used with no weapon selected
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
