--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -34,6 +34,7 @@ v0.41.0-dev (SVN)
 + Translation(Russian): Adding bot information window (readme) completed
 + New Sprites and Camos
 + Feature: Mountain Infantry
++ Bug: FovHighlightingAndDarkening/BoardView close methods were never called
 
 
 v0.40.0 (2015-01-01 20:40 UTC)
