--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -35,6 +35,7 @@ v0.41.0-dev (SVN)
 + New Sprites and Camos
 + Feature: Mountain Infantry
 + Bug: FovHighlightingAndDarkening/BoardView close methods were never called
++ Feature: Added key bind for toggling isometric view (defaults to T)
 
 
 v0.40.0 (2015-01-01 20:40 UTC)
