--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -36,6 +36,8 @@ v0.41.0-dev (SVN)
 + Bug: FovHighlightingAndDarkening/BoardView close methods were never called
 + Feature: Added key bind for toggling isometric view (defaults to T)
 + EntityListFile changes to support MekHQ
++ Feature: MovementEnvelope can now be computed for any selected/viewed unit,
+    regardless of whose turn it is
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
