--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -40,6 +40,8 @@ v0.41.0-dev (SVN)
     regardless of whose turn it is
 + Bug [#4414]: Aero strafing runs are targeting other airborne Aeros
 + Data: New Images/Unit Files/Maps (Thanks Ratach).  Added missing BA Equipment
++ Translation(Russian): More client changes from an actual Russian. Still need
+    his permission to add name to contributors list.
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
