--- a/trunk/megamek/i18n/megamek/client/bot/messages_ru.properties
+++ b/trunk/megamek/i18n/megamek/client/bot/messages_ru.properties
@@ -1,5 +1,5 @@
 BotClient.Hi=Привет, я бот пользователь\!
-BotClient.HowAbout=Хотите ли вы играть в шахматы?
-BotClient.Bye=Дэйв, этот разговор не может служить никакой цели больше. До Свидания.
+BotClient.HowAbout=Как насчет партии в шахматы?
+BotClient.Bye=Дэйв, этот разговор больше не имеет цели. До Свидания.
 BotGUI.notifyOfBot.title=Пожалуйста, ознакомьтесь с ai-readme.txt
-BotGUI.notifyOfBot.message=Бот не работает со всеми единицами или со всеми игровыми вариантами.\nПожалуйста, прочтите ai-readme.txt файл перед использованием бот.\n \nХотели бы вы прочитали документацию искусственного интеллекта сейчас?\n
+BotGUI.notifyOfBot.message=Бот работает не со всеми единицами и не со всеми игровыми вариантами.\nПожалуйста, прочтите файл ai-readme.txt перед использованием бота.\n \nХотели бы вы сейчас прочитать документацию искусственного интеллекта?\n
