--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -47,6 +47,8 @@ v0.41.0-dev (SVN)
     Someone has been using crit slots for this purpose, but we have a dedicated tankSlots
     variable for a reason. Use it! This is how we have equipment that takes 8 crits in
     mechs take 1 slot in a tank!
++ BattleArmor Myomer Booster now properly  treated as a spread-crit item,
+    instead of lumping crits together
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
