--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -49,6 +49,8 @@ v0.41.0-dev (SVN)
     mechs take 1 slot in a tank!
 + BattleArmor Myomer Booster now properly  treated as a spread-crit item,
     instead of lumping crits together
++ Bug: Model should default to "all" but doesn't for loading quirks files,
+    in case the model tag is missing for chassis wide quirks
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
