--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -6,6 +6,7 @@ v0.41.1-dev (SVN)
 + Bug [#4297]: Possible NPE in MovePath.findPathTo
 + Bug [#4420]: Optimization pass on LosEffects, particular losForCoords
 + Bug [#4420]: Game with a hidden unit carrying ECM causes lagged movement
++ Bug [#4420]: Removed calls to Game.checkPositionCacheConsistency
 
 v0.41.0 (2015-01-22 21:00 UTC)
 + Bug [#4397]: Option for year is short a character
