--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -10,6 +10,7 @@ v0.41.1-dev (SVN)
 + Bug: SHA256 check still generating NPEs
 + Bug: Potential NPE in Compute.allowAimedShotWith
 + Data: New Sprites and Unit Fixes.
++ Translation(Russian): Translation of client/messages_ru.properties
 
 v0.41.0 (2015-01-22 21:00 UTC)
 + Bug [#4397]: Option for year is short a character
