--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,6 +1,7 @@
 VERSION HISTORY:
 ----------------
 v0.41.2-dev (SVN)
++ Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
@@ -13,6 +14,8 @@ v0.41.1 (2015-01-28 17:10 UTC)
 + Bug: Potential NPE in Compute.allowAimedShotWith
 + Data: New Sprites and Unit Fixes.
 + Translation(Russian): Translation of client/messages_ru.properties
++ Bug: With simultaneous move/deploy, another player moving could clear
+    move/deploy choices
 
 v0.41.0 (2015-01-22 21:00 UTC)
 + Bug [#4397]: Option for year is short a character
