--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 v0.41.2-dev (SVN)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
++ Bug [#4409]: Fixed another AmmoType related java.lang.ClassCastException
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
