--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -6,6 +6,7 @@ v0.41.2-dev (SVN)
 + Data: New Sprites and Removed the TRO VA units since they are not ready
 	for use yet.
 + Bug [#4219]: Issues with stacking violations and MovePaths
++ Data: New Sprites
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
