--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -8,6 +8,7 @@ v0.41.2-dev (SVN)
 + Bug [#4219]: Issues with stacking violations and MovePaths
 + Data: New Sprites
 + Feature [#1359]: Display "Velocity" in "Currently" field for ASF
++ Bug [#4424]: Jump infantry with 0MP get a free hex when jumping
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
