--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -13,6 +13,8 @@ v0.41.2-dev (SVN)
     properly updated in each step
 + Bug: MovePath.findPathTo doesn't return a good path if the destination can't
     be reached
++ Bug: A* path comparator wasn't considering facing in the heuristic
++ Bug [#4369]: Dropship pathing goes haywire
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
