--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -16,6 +16,7 @@ v0.41.2-dev (SVN)
 + Bug: A* path comparator wasn't considering facing in the heuristic
 + Bug [#4369]: Dropship pathing goes haywire
 + Bug: Updated A* heuristic for aerodyne ASFs: paths shoulder be shorter now
++ After clicking backwards button, path planner will only step back and turn
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
