--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.41.2-dev (SVN)
 + After clicking backwards button, path planner will only step back and turn
 + Bug: Buffered VDNI damage avoid not working correctly
 + Bug [#4426]: Game freezes before Firing Phase
++ Data: New Sprites
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
