--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -61,6 +61,8 @@ v0.41.3-dev
 + Data: New Sprites and adding HTP:Tortuga Units.
 + Bug: Potential NPE computing BV for Protomechs with AMS
 + Bug: Infantry antimek training was getting overriden by default piloting skill
++ Patch [#476]: Coordinates from Point (more accurate mouse click point to hex
+    conversion)
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
